style for more than 1 tag inside posts

--- a/_posts/2015-01-25-markdown.markdown
+++ b/_posts/2015-01-25-markdown.markdown
@@ -2,7 +2,9 @@
 title: "Markdown!"
 layout: post
 date: 2015-10-19 14:40
-tag: markdown
+tag:
+- "markdown"
+- "moreone"
 blog: true
 #star: true
 ---
