adding side-by-side components

--- a/_posts/2015-01-25-markdown.markdown
+++ b/_posts/2015-01-25-markdown.markdown
@@ -26,6 +26,7 @@ You can pick as item to sse how to apply in markdown.
 ### Especial Elements
 - [Evidence](#evidence)
 - [Star](#star)
+- [Side-by-Side](#side-by-side)
 
 ### External Elements
 - [Gist](#gist)
@@ -205,6 +206,42 @@ You can try the evidence!
 {% highlight html %}
 <span class="evidence">Paragraphs can be written like so. A paragraph is the basic block of Markdown. A paragraph is what text will turn into when there is no reason it should become anything else.</span>
 {% endhighlight %}
+
+---
+
+## Side-by-side
+
+Like the [Medium](https://medium.com/) component.
+
+**Image** on the left and **Text** on the right:
+
+{% highlight html %}
+<div class="side-by-side clearfix">
+    <img class="left-image" src="http://kune.fr/wp-content/uploads/2013/10/ghost-blog.jpg">
+    <p class="right-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
+{% endhighlight %}
+
+<div class="side-by-side clearfix">
+    <img class="left-image" src="http://kune.fr/wp-content/uploads/2013/10/ghost-blog.jpg">
+    <p class="right-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
+
+**Text** on the left and **Image** on the right:
+
+{% highlight html %}
+<div class="side-by-side clearfix">
+    <p class="left-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <img class="right-image" src="http://kune.fr/wp-content/uploads/2013/10/ghost-blog.jpg">
+</div>
+{% endhighlight %}
+
+<div class="side-by-side clearfix">
+    <p class="left-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <img class="right-image" src="http://kune.fr/wp-content/uploads/2013/10/ghost-blog.jpg">
+</div>
+
+**IMPORTANT**: don't forget the 'clearfix' class for the div element.
 
 ---
 
