--- a/_posts/2015-01-25-markdown.markdown
+++ b/_posts/2015-01-25-markdown.markdown
@@ -217,13 +217,13 @@ Like the [Medium](https://medium.com/) component.
 
 {% highlight html %}
 <div class="side-by-side clearfix">
-    <img class="left-image" src="http://kune.fr/wp-content/uploads/2013/10/ghost-blog.jpg">
+    <img class="left-image" src="http://kune.fr/wp-content/uploads/2013/10/ghost-blog.jpg" alt="Alt Text">
     <p class="right-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 {% endhighlight %}
 
 <div class="side-by-side clearfix">
-    <img class="left-image" src="http://kune.fr/wp-content/uploads/2013/10/ghost-blog.jpg">
+    <img class="left-image" src="http://kune.fr/wp-content/uploads/2013/10/ghost-blog.jpg" alt="Alt Text">
     <p class="right-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 
@@ -232,13 +232,13 @@ Like the [Medium](https://medium.com/) component.
 {% highlight html %}
 <div class="side-by-side clearfix">
     <p class="left-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <img class="right-image" src="http://kune.fr/wp-content/uploads/2013/10/ghost-blog.jpg">
+    <img class="right-image" src="http://kune.fr/wp-content/uploads/2013/10/ghost-blog.jpg" alt="Alt Text">
 </div>
 {% endhighlight %}
 
 <div class="side-by-side clearfix">
     <p class="left-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <img class="right-image" src="http://kune.fr/wp-content/uploads/2013/10/ghost-blog.jpg">
+    <img class="right-image" src="http://kune.fr/wp-content/uploads/2013/10/ghost-blog.jpg" alt="Alt Text">
 </div>
 
 **IMPORTANT**: don't forget the 'clearfix' class for the div element.
